--- a/src/app/expense/expense.component.css
+++ b/src/app/expense/expense.component.css
@@ -105,20 +105,22 @@
     height: 40px;
 }
 
-input[type=date]{
-    width: 300px;
+.datep{
+    width: 300px !important;
     margin-left: 10px;
     display: inline-block;
     background: none;
-    /* margin-top: 10px; */
     margin-bottom: 10px;
     color: white;
     border: 2px solid cornflowerblue;
     border-radius: 20px;
+    font-family: 'Montserrat';
     padding: 8px 15px;
+    letter-spacing: 2px;
     font-size: 15px;
     transition: .5s;
     outline: none;
+    box-shadow: none;
     padding-right: 10px;
 }
 
@@ -188,8 +190,8 @@ small{
         width: 280px;
     }
 
-    .main input[type=date]{
-        width: 180px;
+    .datep{
+        width: 180px !important;
     }
 
     .main textarea{
