--- a/src/app/bankb/bankb.component.html
+++ b/src/app/bankb/bankb.component.html
@@ -1,28 +1,62 @@
 <div class="total">
-<table id="t1" align="center" width="100%" border=2>
-    <tr id="hd">
-        <td rowspan="2" width="10%">BANK BOOK</td>
-        <td colspan="2">Date</td>
-        <td rowspan="2" width="16%"><input id="sub" name="btnShow" type="submit" value="SHOW"></td>
-    </tr>
-    <tr id="hd">
-        <td width="37%">from &nbsp;<input id="datee" type="date" required></td>
-        <td width="32%">to &nbsp;<input id="datee" type="date" required></td>
-    </tr>
-    <tr id="hd">
-        <td>S.No.</td>
-        <td>Date</td>
-        <td>Amount<br>( in &#8377; )</td>
-        <td>Pay/Recieve</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>06-07-2020</td>
-        <td>567</td>
-        <td>Pay</td>
-    </tr>
-</table>
-<div class="cbal">
-    Closing Balance : {{bal}}
-</div>
+    <h1>BANK BOOK</h1>
+    <div class="find">
+        <form #bbook="ngForm" (ngSubmit)="show(bbook.form)">
+            <div class="control">
+                <div>
+                    <div class="form-group">
+                        <label>From</label><input type="text" placeholder="dd-mm-yyyy" bsDatepicker [bsConfig]="config" autocomplete=off name="fdt" class="form-control datep" required
+                            [class.notvalid]="fdt.invalid && fdt.touched" #fdt="ngModel" [(ngModel)]="s">
+                    </div>
+                    <div class="form-group">
+                        <label>To</label><input type="text" placeholder="dd-mm-yyyy" bsDatepicker [bsConfig]="config" autocomplete=off name="tdt" class="form-control datep" required
+                            [class.notvalid]="tdt.invalid && tdt.touched" #tdt="ngModel" [(ngModel)]="e">
+                    </div>
+                </div>
+                <div>
+                    <input type="submit" value="Show" class="sub" [hidden]="bbook.invalid">
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="nocat" *ngIf="result_fetched && !anyrec">
+        <img src="../../assets/norecords.svg" style="margin-top: 30px; width: 250px; height: 150px;" alt="" srcset="">
+        <div class="headin">
+            <h3>No records found</h3>
+            <h5>between the date-range you mentioned</h5>
+        </div>
+    </div>
+    <div class="result" *ngIf="result_fetched && anyrec">
+        <table class="cat-table" id="cash-book" align="center" width="90%">
+            <thead>
+                <tr>
+                    <th id="th" width="10%">S.No.</th>
+                    <th width="45%">Date</th>
+                    <th width="20%">Amount<br>( in &#8377; )</th>
+                    <th width="20%">Pay / Recieve</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let x of result | paginate: { id: 'pagination', 
+                itemsPerPage : items,
+                currentPage : page,
+                totalItems : totalRecords}">
+                    <td>{{result.indexOf(x) + 1}}</td>
+                    <td>{{x.date}}</td>
+                    <td>{{x.amount}}</td>
+                    <td>{{x.mode}}</td>
+                </tr>
+                <tr *ngIf="totalRecords > items">
+                    <td colspan="4">
+                        <div class="pag">
+                            <pagination-controls id="pagination" maxSize="5" directionLinks="true" (pageChange)="page = $event"></pagination-controls>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="cbal">
+            Closing Balance : {{bal}}
+        </div>
+    </div>
 </div>
