--- a/src/app/income/income.component.css
+++ b/src/app/income/income.component.css
@@ -92,6 +92,25 @@
     padding-right: 10px;
 }
 
+.datep{
+    width: 300px !important;
+    margin-left: 10px;
+    display: inline-block;
+    background: none;
+    margin-bottom: 10px;
+    color: white;
+    border: 2px solid cornflowerblue;
+    border-radius: 20px;
+    font-family: 'Montserrat';
+    padding: 8px 15px;
+    letter-spacing: 2px;
+    font-size: 15px;
+    transition: .5s;
+    outline: none;
+    box-shadow: none;
+    padding-right: 10px;
+}
+
 .main input[type=number]{
     display: inline-block;
     padding-left: 30px;
@@ -105,22 +124,6 @@
     height: 40px;
 }
 
-input[type=date]{
-    width: 300px;
-    margin-left: 10px;
-    display: inline-block;
-    background: none;
-    /* margin-top: 10px; */
-    margin-bottom: 10px;
-    color: white;
-    border: 2px solid cornflowerblue;
-    border-radius: 20px;
-    padding: 8px 15px;
-    font-size: 15px;
-    transition: .5s;
-    outline: none;
-    padding-right: 10px;
-}
 
 .main select{
     width: 260px;
@@ -188,8 +191,8 @@ small{
         width: 280px;
     }
 
-    .main input[type=date]{
-        width: 180px;
+    .datep{
+        width: 180px !important;
     }
 
     .main textarea{
