--- a/src/app/income/income.component.html
+++ b/src/app/income/income.component.html
@@ -1,43 +1,49 @@
 <div class="total">
+    <div class="box" style="display: flex; align-items: center; justify-content: center;">
+        <div class="alert alert-success" *ngIf="message">{{message}}</div>
+        <div class="alert alert-danger" *ngIf="err">{{err}}</div>
+    </div>
 <table class="main" align="center">
     <th>
         Income
     </th>
     <tr>
         <td align="center" style="border-radius: 50px;">
-            <form #ecat="ngForm">
+            <form #inc="ngForm" (ngSubmit)="addIncome(inc.form)">
                 <div class="form-group" style="margin-top: 20px;">
-                    <input placeholder="Income" required #exp="ngModel" ngModel [class.notvalid]="exp.invalid && exp.touched" type="text" name="exp" autocomplete="off" class="form-control">
+                    <input placeholder="Income" required #exp="ngModel" [(ngModel)]="income.name" [class.notvalid]="exp.invalid && exp.touched" type="text" name="exp" autocomplete="off" class="form-control">
                     <small class="text-danger" [class.d-none]="exp.valid || exp.untouched">Name is required</small>
                 </div>
                 <div class="form-group myselect">
                     <label>Category</label>
-                            <select (blur)="validateCat(cat.value)" (change)="validateCat(cat.value)" [class.notvalid]="catHasError && cat.touched" name="cat" class="form-control" #cat="ngModel" ngModel>
-                                <option *ngFor="let x of category" [value]='x'>{{x}}</option>
+                            <select (blur)="validateCat(cat.value)" (change)="validateCat(cat.value)" [class.notvalid]="catHasError && cat.touched && cat.value == 0" name="cat" class="form-control" #cat="ngModel" [(ngModel)]="income.incCatId">
+                                <option value="0"></option>
+                                <option *ngFor="let x of category" [value]='x.id'>{{x.name}}</option>
+                                <option *ngIf="!anyof">No categories added</option>
                             </select>
-                            <small class="text-danger" [class.d-none]="!catHasError || cat.untouched">Choose one of the categories</small>
+                            <small class="text-danger" [class.d-none]="!catHasError || cat.untouched || !anyof || cat.value != 0">Choose one of the categories</small>
                 </div>
                 <div class="form-group">
-                    <span id="lbl">&#8377;</span><input type="number" placeholder="Amount" required #pri="ngModel" ngModel [class.notvalid]="pri.invalid && pri.touched" name="pri" autocomplete="off" class="form-control">
+                    <span id="lbl">&#8377;</span><input type="number" placeholder="Amount" required #pri="ngModel" [(ngModel)]="income.amount" [class.notvalid]="pri.invalid && pri.touched" name="pri" autocomplete="off" class="form-control">
                     <small class="text-danger" [class.d-none]="pri.valid || pri.untouched">Amount is required</small>
                 </div>
                 <div class="form-group myselect">
                     <label>Recieve by</label>
-                    <select (blur)="validatePB(payby.value)" (change)="validatePB(payby.value)" name="payby" [class.notvalid]="pbHasError && payby.touched" class="form-control" #payby="ngModel" ngModel>
+                    <select (blur)="validatePB(payby.value)" (change)="validatePB(payby.value)" name="payby" [class.notvalid]="pbHasError && payby.touched" class="form-control" #payby="ngModel" [(ngModel)]="income.recieveby">
                         <option value="payby" disabled hidden>Pay by</option>
                         <option *ngFor="let x of paymodes" [value]='x'>{{x}}</option>
                     </select>
                     <small class="text-danger" [class.d-none]="!pbHasError || payby.untouched">Choose one of the pay modes</small>
                 </div>
                 <div class="form-group">
-                    <textarea placeholder="Remark" required #remark="ngModel" ngModel [class.notvalid]="remark.invalid && remark.touched" name="remarkails" class="form-control"></textarea>
+                    <textarea placeholder="Remark" required #remark="ngModel" [(ngModel)]="income.remark" [class.notvalid]="remark.invalid && remark.touched" name="remarkails" class="form-control"></textarea>
                     <small class="text-danger" [class.d-none]="remark.valid || remark.untouched">Provide brief remark</small>
                 </div>
                 <div class="form-group">
-                    <label>Date</label><input type="date" name="dt" class="form-control" required [class.notvalid]="dt.invalid && dt.touched" #dt="ngModel" ngModel>
+                    <label>Date</label><input type="text" placeholder="dd-mm-yyyy" bsDatepicker [bsConfig]="config" autocomplete=off name="dt" class="form-control datep" required [class.notvalid]="dt.invalid && dt.touched" #dt="ngModel" [(ngModel)]="income.date">
                     <small class="text-danger" [class.d-none]="dt.valid || dt.untouched">Date is required</small>
                 </div>
-                <input type="submit" value="SUBMIT" class="sub">
+                <input type="submit" value="SUBMIT" class="sub" (click)="untouch(inc.form)">
             </form>
         </td>
     </tr>
