--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800;900&display=swap');
 
+html{
+  background: rgb(27, 27, 27);
+}
 
 body{
-    background-color: rgb(27, 27, 27);
-    font-family: 'Montserrat', sans-serif;
+  background: rgb(27, 27, 27);
+  /* background: violet; */
+  font-family: 'Montserrat', sans-serif;
+}
+
+::-webkit-scrollbar{
+  width: 7px;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+  box-shadow: inset 0 0 4px black;
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(to bottom, rgba(180, 179, 179, 0.637), rgba(128, 128, 128, 0.712));
+  border-radius: 100px;
 }
 .total{
     background: rgb(27, 27, 27);
@@ -23,6 +41,8 @@ body{
   .ngx-pagination .current,
   .btn-info {
     background: rgb(22, 22, 22) !important;
+    padding: 3px;
+    margin: 5px;
     border: transparent !important;
     border-radius: 50px !important;
     transition: .5s;
@@ -53,5 +73,16 @@ body{
   .ngx-pagination .disabled{
      margin: 15px;
   }
+
+  .pag{
+    display: flex;
+    justify-content: center;
+    width: auto;
+    height: 60px;
+    padding: 0;
+}
   
-  
+  .alert{
+    text-align: center; width: auto; padding: 15px 60px; font-family: 'Quicksand'; font-weight: 500;
+  }
+
